loc and focus icon tweaks

--- a/localisation/focus_mer_l_english.yml
+++ b/localisation/focus_mer_l_english.yml
@@ -11,7 +11,7 @@
  Arab_Build_More_Schools_desc:0 "Build More Schools"
  Arab_Research_Funding:0 "Research Funding"
  Arab_Research_Funding_desc:0 "Research Funding"
- Arab_Revise_Bedouin_Control_Law:0 "Revise nomadic laws"
+ Arab_Revise_Bedouin_Control_Law:0 "Revise Nomadic Laws"
  Arab_Revise_Bedouin_Control_Law_desc:0 "The nomadic people of this land have too much freedom, our rule of law must be extended"
  Arab_Integrate_Nomads:0 "Integrate Nomads"
  Arab_Integrate_Nomads_desc:0 "Integrate Nomads"
@@ -39,22 +39,22 @@
  Arab_Road_desc:0 "Access to the Capital is poor, we should expand our road network in the region"
  Arab_construction:0 "Construction in the Capital"
  Arab_construction_desc:0 "Encouraging the civilain economy in our capital will bring great rewards"
- Arab_land:0 "Land developement"
+ Arab_land:0 "Land Developement"
  Arab_land_desc:0 "Much of our countryside lies undeveloped and unsuited for industry, with advances in machines we can change that"
  Arab_construction2:0 "Glass Works"
  Arab_construction2_desc:0 "The construction of a new glass manafacturing plant will aid our economy"
  Arab_Steel:0 "Ironworks"
  Arab_Steel_desc:0 "Let us build a new foundry to power our industry"
- Arab_Industry:0 "Industry modernisation"
+ Arab_Industry:0 "Industry Modernisation"
  Arab_Industry_desc:0 "Our industry is well behind the modern world, we must invest in new and improved methods"
  Arab_Market_Reforms:0 "Market Reforms"
  Arab_Market_Reforms_desc:0 "Inflation is killing our economy we must implement tough new reforms"
- Arab_Arming:0 "Arm the nation"
+ Arab_Arming:0 "Arm the Nation"
  Arab_Arming_desc:0 "It is time to expand our military industry"
- Arab_War:0 "Ready for war"
+ Arab_War:0 "Ready for War"
  Arab_War_desc:0 "The current situation demands our military industry to be fully operational"
  #Navy
- Arab_Sea_Trade:0 "trading ports"
+ Arab_Sea_Trade:0 "Trading Ports"
  Arab_Sea_Trade_desc:0 "Access to the sea is vital for trade"
  Arab_Trade_Fleet:0 "Trade Fleet"
  Arab_Trade_Fleet_desc:0 "we must build a fleet of trading vessels"
@@ -105,9 +105,9 @@
  Arab_NAV_effort:0 "NAV Effort"
  Arab_NAV_effort_desc:0 "Just as the new naval warfare takes place in part beneath the water's surface, part of it takes place in the air above the water."
 #Defenses
- Arab_fort_capital:0 "Defend the capital"
+ Arab_fort_capital:0 "Defend the Capital"
  Arab_fort_capital:0 "With tension in the world rising we must be ready to defend our seat of power"
- Arab_forts:0 "Fortification techniques"
+ Arab_forts:0 "Fortification Techniques"
  Arab_forts_desc:0 "In the past we could rely on the hostile terrian to defend our borders, but recent advances in warfare mean we must build to protect our borders"
  Arab_Elec_Fort:0 "Electrical Defenses"
  Arab_Elec_Fort_desc:0 "Recent breakthroughs in radio and RADAR will lead the way in our defensive strategies"
@@ -115,7 +115,7 @@
  Arab_Listen_desc:0 "The Key to a good defence is knowing what our opponents are doing, we will actively listen on the airwaves"
  Arab_Hide:0 "Scambling Techniques"
  Arab_Hide_desc:0 "Safety is found when you can not be found"
- Arab_Walls:0 "Defensive constructions"
+ Arab_Walls:0 "Defensive Constructions"
  Arab_Walls_desc:0 "We will build fortifications and armories to defend our land"
  Arab_Walls_ground:0 "Ground Defences"
  Arab_Walls_ground_desc:0 "Its boots on the ground, entrenced and ready that provide the best defence"
@@ -126,7 +126,7 @@
  Arab_Establish_desc:0 "Establish our nation"
  Arab_axis:0 "Strength through Power"
  Arab_axis_desc:0 "The axis represent the most powerful nations, we would do well to follow them"
- Arab_sov:0 "Strength through unity"
+ Arab_sov:0 "Strength through Unity"
  Arab_sov_desc:0 "Soviet ideals of equality and community will guide our nation to greatness"
  Arab_sov_sub:0 "Sumbit to the Soviets"
  Arab_sov_sub_desc:0 "It has become increasing clear that if we want the aid of the Soviet Union we must grovel"
@@ -134,7 +134,7 @@
  Arab_sov_stable_desc:0 "The Soviets have offered to greatly expand our industry"
  Arab_Indi:0 "Arabian Strength"
  Arab_Indi_desc:0 "Our people, our land and our values must determine our path"
- Arab_Indi_demo:0 "Arabian democracy"
+ Arab_Indi_demo:0 "Arabian Democracy"
  Arab_Indi_demo_desc:0 "The people of this land shall rule as they choose"
  Arab_Indi_mono:0 "Long live the King!"
  Arab_Indi_mono_desc:0 "It is an honor to serve"
@@ -186,7 +186,7 @@
  
  #### BMP
  # Navy
- BMP_Red_Sea_Trade:0 "Red sea trading ports"
+ BMP_Red_Sea_Trade:0 "Red Sea Trading Port"
  BMP_Red_Sea_Trade_desc:0 "Access to the red sea is vital for trade with Asia"
  BMP_Trade_Fleet:0 "Trade Fleet"
  BMP_Trade_Fleet_desc:0 "we must build a fleet of trading vessels"
@@ -289,10 +289,10 @@
  ##IRQ_coup_desc:0 "The time has come for an end to it all we need to act now"
  #IRQ_purge:0 "Purge the Pro-British"
  #IRQ_purge_desc:0 "All those who support and sympathize with the British imperialists are traitors to the homeland, must be hunted down and purged of our nation"
- #IRQ_military_advance:0 "Military Schools"
- #IRQ_military_advance_desc:0 "With the creation of military schools, we will have our young minds committed to creating new technologies that will be of great benefit to us."
+ IRQ_military_advance:0 "Military Schools"
+ IRQ_military_advance_desc:0 "With the creation of military schools, we will have our young minds committed to creating new technologies that will be of great benefit to us."
  # Army
- IRQ_army_innovations:0 "Westernize the army"
+ IRQ_army_innovations:0 "Westernize the Army"
  IRQ_army_innovations_desc:0 "An effort to bring our army to Western standards is extremely necessary. We should start now."
  IRQ_equipment:0 "Weapon Design"
  IRQ_equipment_desc:0 "Developing our own weapons projects will be essential. If we want to be autonomous in the military technological area"
@@ -338,9 +338,9 @@
  IRQ_torpedoes_desc:0 "Our engineers are working on new torpedoes of great reach and great destructive power, but a bigger investment would be welcome..."
  IRQ_Sea_Trade:0 "Khor Al Zubair Port"
  IRQ_Sea_Trade_desc:0 "The port in Basra is of vital importance to our economy"
- IRQ_Trade_Fleet:0 "trade fleet"
+ IRQ_Trade_Fleet:0 "Trade Fleet"
  IRQ_Trade_Fleet_desc:0 "Construct a trade fleet"
- IRQ_convert_fleet:0 "Convert the merchant fleet"
+ IRQ_convert_fleet:0 "Convert the Merchant Fleet"
  IRQ_convert_fleet_desc:0 "Our coast is defenceless without a navy, we will use the parts of merchant vessels to construct a destroyer"
  IRQ_navy_tt:0 "3 patrol boats are commissioned in our port"
  IRQ_Shipbuilder:0 "Shipbuilding"
@@ -353,12 +353,13 @@
  IRQ_break_treaty_desc:0 "The Anglo-Iraqi treaty is a shame for our nation we must revoke it immediately"
  IRQ_assyrians:0 "Incorporate Assyrian Levies"
  IRQ_assyrians_desc:0 "We have to recognize the Assyrians as part of the Iraqi people, a good start for this is to accept them in our glorious army."
- IRQ_simele_massacre:0 "Simele Massacre"
+ IRQ_simele_massacre:0 "Apologize for Simele"
  IRQ_simele_massacre_desc:0 "Indemnify the villagers and make an official apology. It will mark a new beginning with the Assyrians"
  IRQ_army_sent:0 "Shia Crushed"
- IRQ_send_army:0 "Crush the rebels"
+ IRQ_army_sent_desc:0 "Shia Crushed"
+ IRQ_send_army:0 "Crush the Rebels"
  IRQ_send_army_desc:0 "The Shia tribes continue to be a thorn in our side, we must act quickly"
- IRQ_Shia_deal:0 "Negotiate with the tribes"
+ IRQ_Shia_deal:0 "Negotiate with the Tribes"
  IRQ_Shia_deal_desc:0 "We have been progressively taking power away from the Shia, we will ensure they have a seat in our government"
  IRQ_Shia_Friend:0 "Friend of the Shia"
  IRQ_Shia_Friend_desc:0 "Having kept our word to include the Shia in government we have prevented further unrest"
@@ -371,14 +372,22 @@
  IRQ_Claim:0 "Claim Kuwait"
  IRQ_Claim_desc:0 "Kuwait has always been a part of our land"
  IRQ_British_oil:0 "Export more oil to the UK"
+ IRQ_British_oil_desc:0 "Export more oil to the UK"
  IRQ_British_research:0 "Allied Research"
+ IRQ_British_research_desc:0 "Allied Research"
  IRQ_British_aid:0 "British Aid"
+ IRQ_British_aid_desc:0 "British Aid"
  IRQ_British_train:0 "British Officer Training"
+ IRQ_British_train_desc:0 "British Officer Training"
  IRQ_Ita_aid:0 "Italian Aircraft"
+ IRQ_Ita_aid_desc:0 "Italian Aircraft"
  IRQ_Ger_aid:0 "German Guns"
- IRQ_Prepare_coup:0 "Prepare for a military coup"
+ IRQ_Ger_aid_desc:0 "German Guns"
+ IRQ_Prepare_coup:0 "Prepare for a Military Coup"
+ IRQ_Prepare_coup_desc:0 "Prepare for a Military Coup"
  IRQ_Prepare_coup_tt:0 "Unlocks ambush decisions"
- IRQ_seize_airfields:0 "sieze the airfields"
+ IRQ_seize_airfields:0 "Seize the Airfields"
+ IRQ_seize_airfields_desc:0 "Seize the Airfields"
  #Industry
  IRQ_oil:0 "Nationalize the IPC"
  IRQ_oil_desc:0 "With the nationalization of the Iraqi Petroleum Company we will ultimately own our reserves of natural oil"
@@ -406,7 +415,7 @@
  IRQ_Build_Schools_desc:0 "Build Schools"
  IRQ_Build_More_Schools:0 "Build More Schools"
  IRQ_Build_More_Schools_desc:0 "Build More Schools"
- IRQ_Revise_Bedouin_Control_Law:0 "Revise nomadic laws"
+ IRQ_Revise_Bedouin_Control_Law:0 "Revise Nomadic Laws"
  IRQ_Revise_Bedouin_Control_Law_desc:0 "The nomadic people of this land have too much freedom, our rule of law must be extended"
  IRQ_Integrate_Nomads:0 "Integrate Nomads"
  IRQ_Integrate_Nomads_desc:0 "Integrate Nomads"
@@ -428,16 +437,16 @@
  IRQ_Mining_Operations_desc:0 "Mining Operations"
  IRQ_Trade_More:0 "International Trade"
  IRQ_Trade_More_desc:0 "Trade is vital to the health of our nation"
- IRQ_government:0 "Government reforms"
+ IRQ_government:0 "Government Reforms"
  IRQ_government_desc:0 "Reform the government"
- IRQ_Industry:0 "Industry modernisation"
+ IRQ_Industry:0 "Industry Modernisation"
  IRQ_Industry_desc:0 "Our industry is well behind the modern world, we must invest in new and improved methods"
  #Defenses
- IRQ_fort_capital:0 "Defend the capital"
+ IRQ_fort_capital:0 "Defend the Capital"
  IRQ_fort_capital:0 "With tension in the world rising we must be ready to defend Baghdad from any attacks"
- IRQ_forts:0 "Fortification techniques"
+ IRQ_forts:0 "Fortification Techniques"
  IRQ_forts_desc:0 "In the past we could rely on the hostile terrian to defend our borders, but recent advances in warfare mean we must build to protect our borders"
- IRQ_Walls:0 "Defensive constructions"
+ IRQ_Walls:0 "Defensive Constructions"
  IRQ_Walls_desc:0 "We will build fortifications and armories to defend our land"
  IRQ_Walls_ground:0 "Ground Defences"
  IRQ_Walls_ground_desc:0 "Its boots on the ground, entrenced and ready that provide the best defence"
@@ -456,7 +465,7 @@
  merJOR_Road_desc:0 "Access to the Capital is poor, we should expand our road network in the region"
  merJOR_construction:0 "Construction in the Capital"
  merJOR_construction_desc:0 "Encouraging the civilain economy in our capital will bring great rewards"
- merJOR_Industry:0 "Industry modernisation"
+ merJOR_Industry:0 "Industry Modernisation"
  merJOR_Industry_desc:0 "Our industry is well behind the modern world, we must invest in new and improved methods"
  merJOR_Build_Schools:0 "Build Schools"
  merJOR_Build_Schools_desc:0 "Build Schools"
@@ -488,7 +497,7 @@
  merJOR_Trade_More_desc:0 "Trade More"
  merJOR_Bureaucracy:0 "Bureaucracy"
  merJOR_Bureaucracy_desc:0 "Bureaucracy will help us structure and organize our largely-disorganized country."
- merJOR_Arming:0 "Arm the nation"
+ merJOR_Arming:0 "Arm the Nation"
  merJOR_Arming_desc:0 "It is time to expand our military industry"
  #Political
  merJOR_Recognize_Peel_Commission_Plan:0 "Recognize Peel Commission Plan"
@@ -526,9 +535,9 @@
  merJOR_Arab_League:0 "Arab State"
  merJOR_Arab_League_desc:0 "Form our own Arab State"
  #Defenses
- merJOR_fort_capital:0 "Defend the capital"
+ merJOR_fort_capital:0 "Defend the Capital"
  merJOR_fort_capital:0 "With tension in the world rising we must be ready to defend our seat of power"
- merJOR_forts:0 "Fortification techniques"
+ merJOR_forts:0 "Fortification Techniques"
  merJOR_forts_desc:0 "In the past we could rely on the hostile terrian to defend our borders, but recent advances in warfare mean we must build to protect our borders"
  merJOR_Elec_Fort:0 "Electrical Defenses"
  merJOR_Elec_Fort_desc:0 "Recent breakthroughs in radio and RADAR will lead the way in our defensive strategies"
@@ -536,7 +545,7 @@
  merJOR_Listen_desc:0 "The Key to a good defence is knowing what our opponents are doing, we will actively listen on the airwaves"
  merJOR_Hide:0 "Scambling Techniques"
  merJOR_Hide_desc:0 "Safety is found when you can not be found"
- merJOR_Walls:0 "Defensive constructions"
+ merJOR_Walls:0 "Defensive Constructions"
  merJOR_Walls_desc:0 "We will build fortifications and armories to defend our land"
  merJOR_Walls_ground:0 "Ground Defences"
  merJOR_Walls_ground_desc:0 "Its boots on the ground, entrenced and ready that provide the best defence"
