--- a/localisation/focus_mer_l_english.yml
+++ b/localisation/focus_mer_l_english.yml
@@ -371,7 +371,7 @@
  IRQ_build_assyria_desc:0 "Much work needs to be done to rebuild what was destroyed"
  IRQ_Claim:0 "Claim Kuwait"
  IRQ_Claim_desc:0 "Kuwait has always been a part of our land"
- IRQ_British_oil:0 "Export more oil to the UK"
+ IRQ_British_oil:0 "Export More Oil to the UK"
  IRQ_British_oil_desc:0 "Export more oil to the UK"
  IRQ_British_research:0 "Allied Research"
  IRQ_British_research_desc:0 "Allied Research"
