these are already in BICE

--- a/localisation/leftovers/victory_points_IRQ_l_english.yml
+++ b/localisation/leftovers/victory_points_IRQ_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
  VICTORY_POINTS_2089:0 "Basrah"
  VICTORY_POINTS_2097:0 "Baghdad"
- VICTORY_POINTS_8123:0 "Kirkut"
+ VICTORY_POINTS_8123:0 "Kirkuk"
  VICTORY_POINTS_10106:0 "Mosul"
