--- a/localisation/ideas_mer_l_english.yml
+++ b/localisation/ideas_mer_l_english.yml
@@ -6,7 +6,7 @@
  Arab_Minor1_desc:0 "We are a small player on the gobal stage and lack the influence of other nations"
  Arab_Minor2:0 "Arab Minor"
  Arab_Minor2_desc:0 "We have established our place in the world, but we are now in debt to our new masters"
- Arab_Minor_sov:0 "Soveit Arab Puppet"
+ Arab_Minor_sov:0 "Soviet Arab Puppet"
  Arab_Minor_sov_desc:0 "We serve the revolution"
  Arab_Tribes:0 "Nomadic Tribes"
  Arab_Tribes_desc:0 "A large part of our population is nomadic, making it difficult to administer and allows foreign influence to spread"
