more ai_strategy

--- a/localisation/ideas_mer_l_english.yml
+++ b/localisation/ideas_mer_l_english.yml
@@ -131,7 +131,7 @@
  ISR_dov_yosef:0 "Dov Yosef"
  ISR_abba_eban:0 "Abba Eban"
  ISR_mordechai_maklef:0 "Mordechai Maklef"
- ISR_david_ben-gurion:0 "David Ben Gurion"
+ ISR_david_ben-gurion:0 "David Ben-Gurion"
  ISR_yagil_alon:0 "Yigal Alon"
  ISR_ezer_weizman:0 "Ezer Weizman"
  ISR_ariel_sharon:0 "Ariel Sharon"
