remove references to simele and add bigger event pictures in leftovers

--- a/localisation/ideas_mer_l_english.yml
+++ b/localisation/ideas_mer_l_english.yml
@@ -154,10 +154,10 @@
  IRQ_iraqi_navy_desc:0 "Our small coast does not allow us to build dockyards, our only option is to build dockyards on the Tigris and Euphrates Rivers."
  IRQ_nationalism:0 "Free Iraq Movement"
  IRQ_nationalism_desc:0 "The people seek freedom they are tired of imperialist nations meddling in our affairs, invading our sacred lands and usurping our natural resources."
- IRQ_simele:0 "Simele Massacre"
- IRQ_simele_desc:0 "The Simele massacre was a massacre committed by the armed forces of the Kingdom of Iraq led by Bakr Sidqi during a campaign systematically targeting the Assyrians of northern Iraq in August 1933. The term is used to describe not only the massacre in Simele, but also the killing spree that took place among 63 Assyrian villages in the Dohuk and Mosul districts that led to the deaths of between 5,000 and 6,000 Assyrians."
- IRQ_simele2:0 "Simele Massacre"
- IRQ_simele2_desc:0 "The Simele massacre was a massacre committed by the armed forces of the Kingdom of Iraq led by Bakr Sidqi during a campaign systematically targeting the Assyrians of northern Iraq in August 1933. The term is used to describe not only the massacre in Simele, but also the killing spree that took place among 63 Assyrian villages in the Dohuk and Mosul districts that led to the deaths of between 5,000 and 6,000 Assyrians."
+ IRQ_internal_conflict:0 "Internal Conflict"
+ IRQ_internal_conflict_desc:0 "Internal Conflict"
+ IRQ_internal_conflict2:0 "Internal Conflict"
+ IRQ_internal_conflict2_desc:0 "Internal Conflict"
  IRQ_revolt:0 "Shia Revolts"
  IRQ_revolt_desc:0 "1935 Rumaytha and Diwaniyya revolt or the 1935–1936 Iraqi Shia revolts consisted of a series of Shia tribal uprisings in the mid-Euphrates region against the Sunni dominated authority of the Kingdom of Iraq."
  #In each revolt, the response of the Iraqi government was to use military force to crush the rebellions with little mercy. #removed because now the player does it or can choose not to
