modifiy on_actions, move trait loc to BICE

--- a/localisation/countries_mer_l_english.yml
+++ b/localisation/countries_mer_l_english.yml
@@ -114,4 +114,4 @@
  
  JOR_monarchism:0 "Emirate of Transjordan"
  JOR_monarchism_DEF:0 "The Emirate of Transjordan"
- British_Ally:0 "British Ally"
+ BMP2_BICE_GATHERING_STORM_DESC:0 "The Zionists in the Mandate are becoming increasingly displeased as the promise of an independent Jewish state remains unfulfilled. The Arabs, who before the Mandate had made up a far larger majority of the population, have become so upset by the influx of Jews that they are now in outright revolt!"
